<resources>

    <string name="app_name">Squirrel Observer</string>

    <string name="title_section_setup">Setup</string>
    <string name="title_section_importexport">Import / Export</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="file_import_dialog_title">Select a File to Import</string>

    <string name="interval_picker_dialog_title">Select Interval</string>
    <string name="interval_picker_dialog_confirm">Set</string>
    <string name="interval_picker_dialog_minutes_label">Minutes</string>
    <string name="interval_picker_dialog_seconds_label">Seconds</string>

    <string name="end_session_dialog_title">End Recording Session</string>
    <string name="end_session_dialog_message">Are you sure you want to end the recording session? All observations are already saved.</string>

    <string name="ao_behavior_picker_dialog_title">Select All-Occurrences Behaviors</string>
    <string name="ao_behavior_picker_dialog_confirm">Done</string>

    <string name="ao_observer_id_picker_dialog_title">Enter your Observer ID</string>
    <string name="ao_observer_id_picker_dialog_hint">Observer ID</string>
    <string name="ao_observer_id_picker_dialog_confirm">Continue</string>
    <string name="ao_observer_id_picker_dialog_cancel">Cancel</string>

    <string name="import_error_dialog_title">Import Error</string>
    <string name="import_error_dialog_message">There was an error while importing the file. Please make sure that you upload a \'.csv\' file and that all fields are correctly filled.</string>

    <string name="export_error_dialog_title">Export Error</string>
    <string name="export_error_dialog_message">There was an error while exporting the file. Please make sure the file path and name are valid.</string>

    <string name="record_error_dialog_title">Error</string>
    <string name="record_error_dialog_message">There was an error while recording the observation. Please make sure all parameters are valid and try again.</string>

    <string name="clear_warning_title">Clear Data?</string>
    <string name="clear_warning_message">This action will clear the entire csv file and reset it. This cannot be undone.</string>
    <string name="clear_successful_title">Clear Successful</string>
    <string name="clear_successful_message">The csv file was successfully cleared and reset.</string>
    <string name="clear_error_title">Error</string>
    <string name="clear_error_message">There was a problem while clearing the csv file. The file may not have cleared correctly.</string>

    <string name="actor_tab_indicator">Actor</string>
    <string name="behaviors_tab_indicator">Behav</string>
    <string name="actee_tab_indicator">Actee</string>
    <string name="modifier_tab_indicator">Modif</string>
    <string name="other_tab_indicator">Other</string>

    <string name="record_activity_end_button">End</string>
    <string name="record_activity_scan_radio">Scan</string>
    <string name="record_activity_all_occurrences_radio">A-O</string>
    <string name="record_activity_filter_hint">Filter</string>

    <string name="import_export_location_label">Location File:</string>
    <string name="import_export_actors_label">Actors File:</string>
    <string name="import_export_behaviors_label">Behaviors File:</string>
    <string name="import_export_scan_label">Export Scan Data:</string>
    <string name="import_export_all_occurrences_label">Export All-Occurrences Data:</string>
    <string name="import_export_scan_clear_label">Clear Scan Data:</string>
    <string name="import_export_all_occurrences_clear_label">Clear All-Occurrences Data:</string>
    <string name="import_export_no_file_label">No File Selected.</string>
    <string name="import_export_import_button">Import</string>
    <string name="import_export_export_button">Export</string>
    <string name="import_export_clear_button">Clear</string>

    <string name="setup_start_button">Start</string>
    <string name="setup_location_label">Location:</string>
    <string name="setup_scan_interval_label">Scan Interval:</string>
    <string name="setup_observer_id_label">Observer ID:</string>
    <string name="setup_all_occurrences_label">All-Occurrences Behaviors:</string>
    <string name="setup_default_time">10:00</string>
    <string name="setup_x_hint">X</string>
    <string name="setup_y_hint">Y</string>

    <string name="other_tab_location_label">Location:</string>
    <string name="other_tab_location_x_label">X:</string>
    <string name="other_tab_location_y_label">Y:</string>
    <string name="other_tab_location_meters_unit">m</string>
    <string name="other_tab_group_size_label">Group Size:</string>
    <string name="other_tab_record_button_text">Record</string>
</resources>
