<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".squirrelObserver.fragments.SetupFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spacingLayout"/>
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_start_button"
            android:enabled="false"
            android:id="@+id/startButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_above="@id/startButton"
            android:layout_below="@id/spacingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/section_label"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/setup_location_label"
                    android:layout_below="@+id/section_label"
                    android:layout_alignParentStart="true"
                    android:autoText="false" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_below="@+id/locationLabel"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/locationX"
                        android:textSize="15dp"
                        android:hint="@string/setup_x_hint"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" >
                    </View>

                    <EditText
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/locationY"
                        android:textSize="15dp"
                        android:hint="@string/setup_y_hint"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/setup_scan_interval_label"
                    android:layout_below="@+id/locationFieldLayout"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="53dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/setup_default_time"
                    android:textAlignment="center"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:onClick="onScanIntervalFieldClicked"
                    android:id="@+id/scanIntervalInput" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/setup_observer_id_label"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="53dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/observerIDInput"
                    android:layout_centerVertical="true"
                    android:textSize="15dp"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/setup_all_occurrences_label"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="53dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textAlignment="center"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:onClick="onAOBehaviorsFieldClicked"
                    android:id="@+id/aoBehaviorsInput" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>
