<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".squirrelObserver.squirrelObserver.RecordOtherTabActivity" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_tab_record_button_text"
        android:id="@+id/record_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:onClick="onRecordButtonClicked"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/record_button" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/other_tab_location_label"
                android:id="@+id/location_section_label" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/other_tab_location_x_label"
                    android:id="@+id/location_x_spinner_label"
                    android:layout_marginLeft="50dp" />

                <Spinner
                    android:layout_width="@dimen/location_spinner_size"
                    android:layout_height="@dimen/location_spinner_height"
                    android:id="@+id/location_x_spinner"
                    android:spinnerMode="dialog"
                    android:textAlignment="textStart" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/other_tab_location_y_label"
                    android:id="@+id/location_y_spinner_label"
                    android:layout_marginLeft="40dp" />

                <Spinner
                    android:layout_width="@dimen/location_spinner_size"
                    android:layout_height="@dimen/location_spinner_height"
                    android:id="@+id/location_y_spinner"
                    android:spinnerMode="dialog"
                    android:textAlignment="textStart"
                    android:layout_marginEnd="43dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <EditText
                    android:layout_width="@dimen/location_spinner_size"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:ems="10"
                    android:id="@+id/x_mod_distance" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="m"
                    android:id="@+id/x_unit_m" />

                <EditText
                    android:layout_width="@dimen/location_spinner_size"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:ems="10"
                    android:id="@+id/y_mod_distance"
                    android:layout_marginLeft="40dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="m"
                    android:id="@+id/y_unit_m" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/other_tab_group_size_label"
                    android:id="@+id/group_size_label" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/group_size"
                    android:textAlignment="center"
                    android:text="1" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1" >

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:id="@+id/group_size_btn_1"
                        android:layout_weight=".33333333333333333333333333333333333333333"
                        android:onClick="groupSizeButtonClick" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="2"
                        android:id="@+id/group_size_btn_2"
                        android:layout_weight=".3333333333333333333333333333333333333333333333333333333333333"
                        android:onClick="groupSizeButtonClick" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="3"
                        android:id="@+id/group_size_btn_3"
                        android:layout_weight=".333333333333333333333333333333333333333333333"
                        android:onClick="groupSizeButtonClick" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1" >

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="4"
                        android:id="@+id/group_size_btn_4"
                        android:layout_toRightOf="@+id/group_size_btn_3"
                        android:layout_weight=".33333333333333333333333333333333333333333333"
                        android:onClick="groupSizeButtonClick" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:id="@+id/group_size_btn_5"
                        android:layout_weight=".33333333333333333333333333333333333333333333333333"
                        android:onClick="groupSizeButtonClick" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="6"
                        android:id="@+id/group_size_btn_6"
                        android:layout_weight=".3333333333333333333333333333333333333333333333"
                        android:onClick="groupSizeButtonClick" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1" >

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="7"
                        android:id="@+id/group_size_btn_7"
                        android:layout_alignTop="@+id/group_size_btn_6"
                        android:layout_toRightOf="@+id/group_size_btn_6"
                        android:layout_weight=".3333333333333333333333333333333333333333333333333333333333333333"
                        android:onClick="groupSizeButtonClick" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="8"
                        android:id="@+id/group_size_btn_8"
                        android:layout_alignTop="@+id/group_size_btn_7"
                        android:layout_toRightOf="@+id/group_size_btn_7"
                        android:layout_weight=".333333333333333333333333333333333333333333333333333333333"
                        android:onClick="groupSizeButtonClick" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="9"
                        android:id="@+id/group_size_btn_9"
                        android:layout_alignTop="@+id/group_size_btn_8"
                        android:layout_toRightOf="@+id/group_size_btn_8"
                        android:layout_weight=".3333333333333333333333333333333333333333333333333"
                        android:onClick="groupSizeButtonClick" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>